--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,35 +16,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.13"]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+    - name: Install uv and set the python version
+      uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Create virtual environment
-      run: |
-        python -m venv .venv
-        echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest
-        python -m pip install "maturin[pathself]"
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Set up Rust
-      run: rustup show
-
-    - name: Install Polars Styler
-      run: |
-        source ${GITHUB_WORKSPACE}/.venv/bin/activate
-        maturin develop
+    - name: Run linter
+      run: uv run ruff check
 
     - name: Run tests
-      run: pytest
+      run: uv run pytest py_tests
