--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,18 +3,19 @@ name = "polars_styler"
 version = "0.1.0"
 description = ""
 readme = "README.md"
-
+requires-python = ">=3.10"
 dependencies = [
-    "polars ~= 0.18.2",
-    "pyarrow ~= 12.0.1",
+    "polars>=1.21.0",
+    "pyarrow>=19.0.0",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
-    "pytest",
+    "pytest>=8.3.4",
+    "ruff>=0.9.4",
 ]
 
-[build-system]
-requires = ["maturin>=0.14,<0.15"]
-build-backend = "maturin"
-
+[tool.ruff]
+exclude = [
+    "*.ipynb",
+]
