--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "polars>=1.21.0",
     "pyarrow>=19.0.0",
+    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
 ]
 
 [dependency-groups]
