--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "jinja2>=3.1.5",
+    "parameterized>=0.9.0",
     "pytest>=8.3.4",
     "ruff>=0.9.4",
 ]
