add docstrings to all public methods of Styler

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,3 +31,6 @@ jobs:
 
     - name: Run tests
       run: uv run pytest py_tests
+
+    - name: Run docstring tests
+      run: uv run python -m doctest polars_styler/**/*.py
