--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Run linter
-      run: uv run ruff check
+      run: uv run ruff format --check && uv run ruff check
+
+    - name: Run type checker
+      run: uv run mypy .
 
     - name: Run tests
       run: uv run pytest
